--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,63 @@
  *= require_tree .
  *= require_self
  */
+
+ body {
+   display: flex;
+   flex-direction: row;
+   margin: 0;
+ }
+
+ h1 {
+   color: black;
+ }
+
+ .contents {
+   padding-left: 60px;
+   background-color: white;
+   color: black;
+   width: 100vw;
+ }
+
+ #sidebar {
+   background-color: black;
+   color: white;
+   display: flex;
+   flex-direction: column;
+   width: 200px;
+   height: 100vh;
+ }
+
+#sidebarHeader {
+  padding-bottom: 20px;
+  padding-left: 0;
+  height: 100px;
+}
+
+ #sidebarHeader:hover {
+   background-color: black;
+ }
+
+.sidebarTab {
+  height: 50px;
+  width: 200px;
+  background-color: black;
+  color: white;
+  font-size: 48;
+  /*border: none;*/
+  padding-left: 20px;
+  text-decoration: none;
+  vertical-align: center;
+  padding-top: 20px;
+
+
+}
+
+
+.sidebarTab:hover {
+  background-color: gray;
+}
+
+.activeTab {
+  background-color: gray;
+}
