--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,9 +1,9 @@
 body {
-  background-color: #fff;
+  background-color: black;
   color: #333;
   margin: 33px;
   font-family: verdana, arial, helvetica, sans-serif;
-  font-size: 13px;
+  // font-size: 13px;
   line-height: 18px;
 }
 
@@ -21,14 +21,15 @@ pre {
 
 a {
   color: #000;
+  text-decoration: none;
 
-  &:visited {
-    color: #666;
-  }
+  // &:visited {
+  //   color: #666;
+  // }
 
   &:hover {
     color: #fff;
-    background-color: #000;
+    // background-color: #000;
   }
 }
 
