--- a/app/views/pages/main.html.erb
+++ b/app/views/pages/main.html.erb
@@ -1,3 +1,4 @@
 <div class = landing-background>
-  <h1> Welcome to the Doggo Playground </h1>
+  
+  <h1 style='color: white;'> Welcome to the Doggo Playground </h1>
 </div>
