--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -20,18 +20,18 @@ pre {
 }
 
 a {
-  color: #000;
+  color: inherit;
   text-decoration: none;
+}
 
   // &:visited {
   //   color: #666;
   // }
 
-  &:hover {
-    color: #fff;
-    // background-color: #000;
-  }
-}
+//   &:hover {
+//     color: #fff;
+//   }
+
 
 th {
   padding-bottom: 5px;
