--- a/app/views/dogs/new.html.erb
+++ b/app/views/dogs/new.html.erb
@@ -1,5 +1,10 @@
-<h1>New Dog</h1>
+<div class='contents'>
+
+  <h1> Add your dog to Parkr </h1>
+
 
 <%= render 'form', dog: @dog %>
 
 <%= link_to 'Back', dogs_path %>
+
+</div>
