--- a/app/views/parks/new.html.erb
+++ b/app/views/parks/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Park</h1>
+<div class='contents'>
 
-<%= render 'form', park: @park %>
+  <h1>New Park</h1>
 
-<%= link_to 'Back', parks_path %>
+  <%= render 'form', park: @park %>
+
+</div>
