Add owner param to dog and three other params to park, plus some stying

--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -2,13 +2,18 @@ body {
   background-color: black;
   color: #333;
   margin: 33px;
-  font-family: verdana, arial, helvetica, sans-serif;
+  font-family: sans-serif;
   // font-size: 13px;
   line-height: 18px;
+  position:fixed;
+   top:0;
+   bottom:0;
+   left:0;
+   right:0;
 }
 
 p, ol, ul, td {
-  font-family: verdana, arial, helvetica, sans-serif;
+  font-family: sans-serif;
   font-size: 13px;
   line-height: 18px;
 }
