--- a/app/views/pages/main.html.erb
+++ b/app/views/pages/main.html.erb
@@ -1,4 +1,14 @@
-<div class = landing-background>
-  
-  <h1 style='color: white;'> Welcome to the Doggo Playground </h1>
-</div>
+<!-- View for landing page -->
+
+<contents>
+
+  <div class = landing-background  style='color: white; padding-left: 40px;'>
+
+    <h1 style='color: white;'> Welcome to the Doggo Playground </h1>
+
+    <h2> Like facebook for your dog. </h2>
+
+    Keeps track of your dog’s friends and their favourite parks.
+  </div>
+
+<contents>
