--- a/app/views/parks/_form.html.erb
+++ b/app/views/parks/_form.html.erb
@@ -21,6 +21,22 @@
     <%= form.text_field :address, id: :park_address %>
   </div>
 
+  <div class="field">
+    <%= form.label :offlead %>
+    <%= form.check_box :offlead, id: :park_offlead %>
+  </div>
+
+  <div class="field">
+    <%= form.label :fence %>
+    <%= form.check_box :offlead, id: :park_fence %>
+  </div>
+
+  <div class="field">
+    <%= form.label :bag %>
+    <%= form.check_box :offlead, id: :park_bag %>
+  </div>
+
+
 
 
   <div class="actions">
