--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,6 +18,16 @@
    display: flex;
    flex-direction: row;
    margin: 0;
+   width: 100vw;
+   position:fixed;
+   top:0;
+   bottom:0;
+   left:0;
+   right:0;
+ }
+
+ #select {
+   width: 200vw;
  }
 
  #page {
@@ -25,6 +35,7 @@
    flex-direction: column;
    background-color: white;
    position: relative;
+   width: 100vw;
  }
 
  #topbar {
@@ -35,6 +46,8 @@
    position: absolute;
    z-index: 10;
    padding: 15px;
+   margin-right: 0;
+   /*text-align: right;*/
    /*opacity: 0.6;*/
  }
 
@@ -49,6 +62,9 @@
    background-color: white;
    color: black;
    width: 100vw;
+ }
+
+ .add-new {
  }
 
  #sidebar {
