--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -1,9 +1,9 @@
-
+<!-- Sidebar View -->
 <div id = 'sidebar'>
   <%= link_to("/") do %>
     <div id='sidebarHeader' class = "sidebarTab">
       <h2 style = 'text-align: center;'>Parkr</h2>
-      <p style = 'text-align: center;'>Where your dog <br> wants to be</p>
+        <p style = 'text-align: center;'>Where your dog <br> wants to be</p>
     </div>
   <% end %>
 
