--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,8 +1,8 @@
 body {
-  background-color: black;
   color: #333;
   margin: 33px;
   font-family: sans-serif;
+  font-weight: lighter;
   // font-size: 13px;
   line-height: 18px;
   position:fixed;
