--- a/app/views/pages/main.html.erb
+++ b/app/views/pages/main.html.erb
@@ -1,14 +1,13 @@
 <!-- View for landing page -->
 
-<contents>
+<div class='contents'>
 
-  <div class = landing-background  style='color: white; padding-left: 40px;'>
-
-    <h1 style='color: white;'> Welcome to the Doggo Playground </h1>
+  <!-- <div class = landing-background  style='color: white; padding-left: 40px;'> -->
+    <h1> Welcome to the Doggo Playground </h1>
 
     <h2> Like facebook for your dog. </h2>
 
     Keeps track of your dog’s friends and their favourite parks.
-  </div>
+  <!-- </div> -->
 
-<contents>
+</div>
