--- a/app/views/parks/_form.html.erb
+++ b/app/views/parks/_form.html.erb
@@ -21,24 +21,23 @@
     <%= form.text_field :address, id: :park_address %>
   </div>
 
-  <div class="field">
-    <%= form.label :offlead %>
+  <br>
+  <div class="field check">
     <%= form.check_box :offlead, id: :park_offlead %>
+    <%= form.label :offlead %>
   </div>
 
-  <div class="field">
+  <div class="field check">
+    <%= form.check_box :fence, id: :park_fence %>
     <%= form.label :fence %>
-    <%= form.check_box :offlead, id: :park_fence %>
   </div>
 
-  <div class="field">
+  <div class="field check">
+    <%= form.check_box :bag, id: :park_bag %>
     <%= form.label :bag %>
-    <%= form.check_box :offlead, id: :park_bag %>
   </div>
 
-
-
-
+  <br>
   <div class="actions">
     <%= form.submit %>
   </div>
