--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,25 +4,12 @@
     <title>DogPark</title>
     <%= csrf_meta_tags %>
 
-
-
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-    <%= render "shared/sidebar" %>
-
-    <div id='page'>
-      <div id='topbar'>
-        <% if current_user %>
-          Signed in as <%= current_user.name %> | <%= link_to "Logout", '/logout' %>
-        <% else %>
-          <%= link_to 'Login', '/login' %> | <%= link_to 'Signup', '/signup' %>
-        <% end %>
-      </div>
-
-      <%= yield %>
-    </div>
+    <%= render "shared/topbar" %>
+    <%= yield %>
   </body>
 </html>
