--- a/app/views/parks/show.html.erb
+++ b/app/views/parks/show.html.erb
@@ -66,7 +66,7 @@
       <% end %>
     <% end %>
 
-    <div class='card'>
+    <div class='card add-button'>
       <%= form_tag(controller: "parks", action: "add_dog", method: "post") do %>
         <div class="field" style='font-size: 30px; text-align: center; padding: 0;'>
           <%= select_tag :dog_name, options_for_select((@user.dogs - @park.dogs).collect{ |dog|
