--- a/app/views/shared/_topbar.html.erb
+++ b/app/views/shared/_topbar.html.erb
@@ -1,15 +1,15 @@
 <!-- Topbar View -->
 <div id='topbar' style = 'display: flex; flex-direction: row;'>
 
-  <%= link_to("/") do %>
-    <strong>Parkr</strong>
-  <% end %>
+  <div style = 'font-weight: bold'>
+    <%= link_to 'Parkr', "/"  %>
+  </div>
 
   <div style = 'margin-left: 40px;'>
     <%= link_to 'All Parks', parks_path %>
   </div>
 
-  <div style = 'margin-left: auto;'>
+  <div style = 'margin-left: auto; margin-right: 80px;'>
     <% if current_user %>
         <%= link_to 'My Profile', '/profile' %> | <%= link_to "Logout", '/logout' %>
     <% else %>
