--- a/app/views/dogs/edit.html.erb
+++ b/app/views/dogs/edit.html.erb
@@ -4,6 +4,8 @@
     <%= @dog.name %>
   </h1>
 
-  <%= render 'form', dog: @dog %>
+  <div class= 'form'>
+    <%= render 'form', dog: @dog %>
+  </div>
 
 </div>
