--- a/app/views/dogs/new.html.erb
+++ b/app/views/dogs/new.html.erb
@@ -2,9 +2,10 @@
 
   <h1> Add your dog to Parkr </h1>
 
+<div class= 'form'>
+  <%= render 'form', dog: @dog %>
+</div>
 
-<%= render 'form', dog: @dog %>
 
-<%= link_to 'Back', dogs_path %>
 
 </div>
