--- a/app/views/pages/main.html.erb
+++ b/app/views/pages/main.html.erb
@@ -1,14 +1,14 @@
 <!-- View for landing page -->
 
-<div class='contents'>
+<div class='contents' style ='justify-content:center; align-items:center; padding-bottom:62px;'>
 
   <!-- <div class = landing-background  style='color: white; padding-left: 40px;'> -->
-  
+
     <h1> Welcome to the Doggo Playground </h1>
 
     <h2> Like facebook for your dog. </h2>
 
-    Keeps track of your dog’s friends and their favourite parks.
+    Keeps track of your dog’s favourite parks.
 
   <!-- </div> -->
 
