--- a/app/views/parks/edit.html.erb
+++ b/app/views/parks/edit.html.erb
@@ -2,6 +2,8 @@
 
   <h1>Editing Park</h1>
 
-  <%= render 'form', park: @park %>
+  <div class='form'>
+    <%= render 'form', park: @park %>
+  </div>
 
 </div>
