--- a/app/views/parks/index.html.erb
+++ b/app/views/parks/index.html.erb
@@ -22,12 +22,14 @@
       <% end %>
     <% end %>
 
-    <%= link_to 'parks/new' do %>
-      <div class='card'>
-        <p style ='font-size:80px; float: left; font-weight: 100; margin: 0; line-height:80px; width: 300px; text-align: center;'>
-          +
-        </p>
-      </div>
+    <% if current_user %>
+      <%= link_to 'parks/new' do %>
+        <div class='card'>
+          <p style ='font-size:80px; float: left; font-weight: 100; margin: 0; line-height:80px; width: 300px; text-align: center;'>
+            +
+          </p>
+        </div>
+      <% end %>
     <% end %>
   </div>
 
