--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,8 +18,8 @@
     <% end %>
 
     <%= link_to (new_dog_path) do %>
-      <div class='card add-button'>
-        <p style ='font-size:80px; float: left; font-weight: 100; margin: 0; line-height:80px; width: 300px; text-align: center;'>
+      <div class='card'>
+        <p style ='font-size:80px; font-weight: 100; margin: 0; line-height:80px; width: 300px; text-align: center;'>
           +
         </p>
       </div>
